rustdocs/errors/rust-bitcoin-primitives-src-transaction.rs.txt
error[E0433]: failed to resolve: you might be missing crate `core`
  --> ../rust-bitcoin/primitives/src/transaction.rs:13:5
   |
13 | use core::convert::Infallible;
   |     ^^^^
   |     |
   |     you might be missing crate `core`
   |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `core`
  --> ../rust-bitcoin/primitives/src/transaction.rs:14:5
   |
14 | use core::fmt;
   |     ^^^^
   |     |
   |     you might be missing crate `core`
   |     help: try using `std` instead of `core`: `std`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internals`
  --> ../rust-bitcoin/primitives/src/transaction.rs:28:5
   |
28 | use internals::array::ArrayExt as _;
   |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
   |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
   |
13 + extern crate internals;
   |

error[E0432]: unresolved import `encoding`
  --> ../rust-bitcoin/primitives/src/transaction.rs:20:5
   |
20 | use encoding::{ArrayEncoder, BytesEncoder, Encodable, Encoder2, Unexpect...
   |     ^^^^^^^^ use of unresolved module or unlinked crate `encoding`
   |
help: you might be missing a crate named `encoding`, add it to your project and import it in your code
   |
13 + extern crate encoding;
   |

error[E0432]: unresolved import `internals`
  --> ../rust-bitcoin/primitives/src/transaction.rs:31:5
   |
31 | use internals::write_err;
   |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
   |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
   |
13 + extern crate internals;
   |

error[E0432]: unresolved import `crate::hash_types`
  --> ../rust-bitcoin/primitives/src/transaction.rs:54:16
   |
54 | pub use crate::hash_types::{Ntxid, Txid, Wtxid, BlockHashDecoder, BlockH...
   |                ^^^^^^^^^^ use of unresolved module or unlinked crate `hash_types`
   |
help: you might be missing a crate named `hash_types`, add it to your project and import it in your code
   |
13 + extern crate hash_types;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `encoding`
    --> ../rust-bitcoin/primitives/src/transaction.rs:1034:1
     |
1034 | encoding::encoder_newtype! {
     | ^^^^^^^^ use of unresolved module or unlinked crate `encoding`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `encoding`
    --> ../rust-bitcoin/primitives/src/transaction.rs:1379:1
     |
1379 | encoding::encoder_newtype! {
     | ^^^^^^^^ use of unresolved module or unlinked crate `encoding`

error[E0425]: cannot find type `OutPointEncoder` in this scope
    --> ../rust-bitcoin/primitives/src/transaction.rs:1041:11
     |
1041 |         = OutPointEncoder<'e>
     |           ^^^^^^^^^^^^^^^
...
1103 | pub struct OutPointDecoder(encoding::ArrayDecoder<36>);
     | ------------------------------------------------------- similarly named struct `OutPointDecoder` defined here
     |
help: a struct with a similar name exists
     |
1041 -         = OutPointEncoder<'e>
1041 +         = OutPointDecoder<'e>
     |

error[E0425]: cannot find type `VersionEncoder` in this scope
    --> ../rust-bitcoin/primitives/src/transaction.rs:1385:24
     |
1385 |     type Encoder<'e> = VersionEncoder;
     |                        ^^^^^^^^^^^^^^
...
1392 | pub struct VersionDecoder(encoding::ArrayDecoder<4>);
     | ----------------------------------------------------- similarly named struct `VersionDecoder` defined here
     |
help: a struct with a similar name exists
     |
1385 -     type Encoder<'e> = VersionEncoder;
1385 +     type Encoder<'e> = VersionDecoder;
     |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `encoding`
    --> ../rust-bitcoin/primitives/src/transaction.rs:1103:28
     |
1103 | pub struct OutPointDecoder(encoding::ArrayDecoder<36>);
     |                            ^^^^^^^^ use of unresolved module or unlinked crate `encoding`
     |
     = help: you might be missing a crate named `encoding`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `encoding`
    --> ../rust-bitcoin/primitives/src/transaction.rs:1114:6
     |
1114 | impl encoding::Decoder for OutPointDecoder {
     |      ^^^^^^^^ use of unresolved module or unlinked crate `encoding`
     |
     = help: you might be missing a crate named `encoding`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `encoding`
    --> ../rust-bitcoin/primitives/src/transaction.rs:1138:6
     |
1138 | impl encoding::Decodable for OutPoint {
     |      ^^^^^^^^ use of unresolved module or unlinked crate `encoding`
     |
     = help: you might be missing a crate named `encoding`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `encoding`
    --> ../rust-bitcoin/primitives/src/transaction.rs:1384:6
     |
1384 | impl encoding::Encodable for Version {
     |      ^^^^^^^^ use of unresolved module or unlinked crate `encoding`
     |
     = help: you might be missing a crate named `encoding`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `encoding`
    --> ../rust-bitcoin/primitives/src/transaction.rs:1392:27
     |
1392 | pub struct VersionDecoder(encoding::ArrayDecoder<4>);
     |                           ^^^^^^^^ use of unresolved module or unlinked crate `encoding`
     |
     = help: you might be missing a crate named `encoding`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `encoding`
    --> ../rust-bitcoin/primitives/src/transaction.rs:1403:6
     |
1403 | impl encoding::Decoder for VersionDecoder {
     |      ^^^^^^^^ use of unresolved module or unlinked crate `encoding`
     |
     = help: you might be missing a crate named `encoding`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `encoding`
    --> ../rust-bitcoin/primitives/src/transaction.rs:1423:6
     |
1423 | impl encoding::Decodable for Version {
     |      ^^^^^^^^ use of unresolved module or unlinked crate `encoding`
     |
     = help: you might be missing a crate named `encoding`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `encoding`
    --> ../rust-bitcoin/primitives/src/transaction.rs:1430:32
     |
1430 | pub struct VersionDecoderError(encoding::UnexpectedEofError);
     |                                ^^^^^^^^ use of unresolved module or unlinked crate `encoding`
     |
     = help: you might be missing a crate named `encoding`

error: aborting due to 18 previous errors

Some errors have detailed explanations: E0425, E0432, E0433.
For more information about an error, try `rustc --explain E0425`.
